# Entdecker

./: README.md
3d_printing/: 096_display_stand.fcstd  096_display_stand.stl  130_display_stand.fcstd  130_display_stand.stl  GPS_bot.fcstd  GPS_bot.stl  GPS_top.fcstd  GPS_top.stl  LidarHood.fcstd  LidarHood.stl  LidarHood1.fcstd  LidarHood1.stl  MagHolder.fcstd  MagHolder.stl  UBSHubGuard.fcstd  USBHubGuard.stl  gps_holder_10cm.fcstd  gps_holder_10cm.stl  hall_holder1.fcstd  hall_holder1.stl  hall_holder2.fcstd  hall_holder2.stl  xmaxx-front-extension.fcstd  xmaxx-front-extension.stl
Arduino/sketches/DeadManSwitch/: DeadManSwitch.ino
Arduino/sketches/DeadManSwitchIrq/: DeadManSwitchIrq.ino
Arduino/sketches/Entdecker_Touchbar/: Entdecker_Touchbar.ino
Arduino/sketches/RpmHandler/: RpmHandler.ino
Arduino/sketches/ServoMux/: ServoMux.ino
Arduino/sketches/ServoMuxIrq/: ServoMuxIrq.ino
Laptop/GPS/: diff_handler.py  handler.py  handler_usb.py  load_waypoints.py  startup.sh  status_display.py
ROS/mw/mw/: package.xml
ROS/mw/mw_arduino/: CMakeLists.txt  package.xml  setup.py
ROS/mw/mw_arduino/nodes/: receiver.py  shutdown.py  shutdown.py.thread
ROS/mw/mw_lidar/: CMakeLists.txt  package.xml  setup.py
ROS/mw/mw_lidar/nodes/: lidar_scan_combiner.py
ROS/mw/mw_mavros/: CMakeLists.txt  package.xml  setup.py
ROS/mw/mw_mavros/launch/: mw1.launch  mw2.launch
ROS/mw/mw_mavros/nodes/: cone_handler.py  cone_handler.py.thread  cone_handler_goto.py  receiver.py  sound_handler.py  touch_handler.py
ROS/mw/mw_mavros/src/mw_mavros/: base_handler.py  get_gps.py  load_waypoints.py  reset.py
ROS/mw/mw_rtkrcv/: CMakeLists.txt  README  package.xml  setup.py
ROS/mw/mw_rtkrcv/config/: rtkrcv.conf.template
ROS/mw/mw_rtkrcv/launch/: gps.launch
ROS/mw/mw_rtkrcv/msg/: GpsLocation.msg
ROS/mw/mw_rtkrcv/src/: rtkrcv_publish.cpp
ROS/mw/mw_video/: CMakeLists.txt  package.xml  setup.py
ROS/mw/mw_video/msg/: ConeLocation.msg
ROS/mw/mw_video/nodes/: image_converter.py
ROS/mw/mw_video/src/: image_converter.cpp  talker.py
startup/etc/: rc.local
startup/home/odroid/: ros_startup.sh
