<?xml version="1.0"?>
<package>
  <name>mw_mavros</name>
  <version>0.0.1</version>
  <description>The odroid_mavros handling package</description>

  <maintainer email="marco@sonic.net">Marco Walther</maintainer>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>mw_video</build_depend>
  <build_depend>mavros</build_depend>
  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>mw_video</run_depend>
  <run_depend>mavros</run_depend>

  <export>
  </export>
</package>
